# ProfessionalPlatform

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  README_koncert_bot.md  api_testing.py  conspect.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  prestart.sh  pyproject.toml  start_celery.sh  start_project.sh  start_screen_project.sh
.github/workflows/: django.yml
nginx/: nginx.conf
pro_platform/: apply_data_migrate_shop_projects.sh  common_test_cases_global.py  config-3.py  config.py  make_dump_shop_projects.sh  manage.py
pro_platform/auth_block/: apps.py  forms.py  tasks.py  tests.py  urls.py  views.py
pro_platform/my_projects/: config.py  forms.py  models.py  urls.py  validators.py
pro_platform/my_projects/migrations/: 0001_initial.py  0002_imagecarnumdetect.py  0003_videoexerciserec.py  0004_alter_videoexerciserec_videofield.py  0005_rename_imgcarnumdetect_imagecarnumdetect_inputimage_and_more.py  0006_alter_videoexerciserec_inputvideo.py  0007_alter_imagecarnumdetect_inputimage_and_more.py
pro_platform/my_projects/tests/: common_test_cases.py  test_car_num.py  test_exercise_rec.py  test_koncert_bot.py  test_sex_age.py
pro_platform/my_projects/views/: car_num_det.py  exercise_rec.py  image_car_num_view.py  image_sex_age_view.py  koncert_bot.py  (+3 more)
pro_platform/pro_platform/: asgi.py  celery.py  fake.py  settings.py  urls.py  wsgi.py
pro_platform/shop_projects/: admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  urls.py
pro_platform/templates/: base.html  index.html
(+118 files in other folders)
