[tool.poetry]
name = "les-30"
version = "0.1.0"
description = ""
authors = ["Vladislav <vlad1998ss@mail.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
celery = "^5.3.1"
django-celery-results = "^2.5.1"
python-dotenv = "^1.0.0"
django-mail-templated = "^2.6.5"
psycopg2 = "^2.9.6"
pillow = "^10.0.0"
requests = "^2.31.0"
opencv-python = "^4.8.0.74"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.1.0"
faker = "^19.1.0"
factory-boy = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
